# biofeedback

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  Habilitacja.md  MATHEMATICAL_FORMULAS.md  MATHEMATICAL_REPORT.docx  PROJECT_STRUCTURE.md  README.md  REPORT_FORMULAS.md  biofeedback.geany  biofeedback_app.py  config.json  hx711_advanced.ino  hx711_arduino_nano.ino  meson.build  pilates.md  posturograf.md  push_to_github.sh  test_auth  test_auth.cpp  test_qt5charts  test_qt5charts.cpp
config/: config.json  users.json
data/: DataManager.cpp  DataManager.hpp  Encryption.cpp  Encryption.hpp
data/outlines/: knee_rehab_basic.json  shoulder_mobility.json
doc/: habibi.md  rozdzial_1_1.md  rozdzial_1_2.md  rozdzial_1_3_systemy_wbudowane.md  rozdzial_1_4_rozroznienie_prawne.md  rozdzial_1_5_legalizacja.md  rozdzial_2_1_wymagania.md  rozdzial_2_2_petla_sprzezenia_zwrotnego.md  rozdzial_2_3_architektura_hardware.md  rozdzial_2_5_integracja_czujnika.md  rozdzial_3_1_projekt_mechaniczny.md  rozdzial_3_2_uklady_warunkowania_sygnalu.md  rozdzial_3_3_zasilanie_emc_bezpieczenstwo.md  rozdzial_3_5_dokumentacja_techniczna.md  rozdzial_4_1_architektura_oprogramowania.md  rozdzial_4_2_firmware_arduino_pico.md  rozdzial_4_4_implementacja_petli_sprzezenia_zwrotnego.md  rozdzial_4_5_interfejs_uzytkownika_i_eksport_danych.md  rozdzial_5_1_metodologia_wzorcowania.md  rozdzial_5_2_legalizacja_pierwotna.md  rozdzial_5_3_deklaracja_zgodnosci.md  rozdzial_5_4_analiza_porownawcza.md  rozdzial_5_5.md  rozdzial_6_1_scenariusze_kliniczne_i_treningowe.md  rozdzial_6_2_protokoly_monitorowania_progresji.md  rozdzial_6_3_analiza_przypadkow.md  rozdzial_6_4_bezpieczenstwo_ograniczenia_zalecenia.md  rozdzial_6_5_ocena_uzytecznosci_ergonomii_akceptacji.md  rozdzial_7_1_osiagniecie_projektowe.md  rozdzial_7_2_analiza_wynikow_wdrozenia_i_wplyw_na_standaryzacje.md  rozdzial_7_3_skalowanie_komercjalizacja_integracja.md  rozdzial_8_literatura.md  rozdzial_8_zalaczniki.md  spis_tresci.md  wstep.md
examples/: main.cpp  qt5_mandatory.cpp
include/: formulas.hpp
include/core/: Application.hpp  Authentication.hpp  ConfigManager.hpp  Logger.hpp
include/data/: DataManager.hpp  Encryption.hpp
include/games/: FlappyBirdGame.hpp  GameEngine.hpp  MarioGame.hpp  PongGame.hpp  SinGame.hpp
include/gui/: GraphWidget.hpp  LoginDialog.hpp  MainWindow.hpp
include/sensor/: SerialCommunication.hpp
include/tab/: MeasurementTab.hpp  OutlineTab.hpp  PatientTab.hpp  TrainingTab.hpp
src/: formulas.cpp  main.cpp
src/core/: Application.cpp  Authentication.cpp  ConfigManager.cpp  Logger.cpp
src/data/: DataManager.cpp  Encryption.cpp
src/games/: FlappyBirdGame.cpp  GameEngine.cpp  MarioGame.cpp  PongGame.cpp  SinGame.cpp
src/gui/: GraphWidget.cpp  LoginDialog.cpp  MainWindow.cpp
src/sensor/: SerialCommunication.cpp
src/tab/: MeasurementTab.cpp  OutlineTab.cpp  PatientTab.cpp  TrainingTab.cpp
tests/: CMakeLists.txt  auth_regression.cpp  data_manager_regression.cpp
